change banner and text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#services">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -73,8 +73,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Hello World</h1>
-                        <h3>Follow Me @</h3>
+                        <h1>Jheysoon</h1>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
