--- a/index.html
+++ b/index.html
@@ -77,13 +77,22 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/jheymartinez1" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://twitter.com/jheymartinez1" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-twitter fa-fw"></i>
+                                    <span class="network-name">Twitter</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="https://github.com/Jheysoon" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="https://github.com/Jheysoon" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-github fa-fw"></i>
+                                    <span class="network-name">Github</span>
+                                </a>
                             </li>
                             <li>
-                                <a href="https://facebook.com/jayson.martinez.359126" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-facebook-square fa-fw"></i> <span class="network-name">Facebook</span></a>
+                                <a href="https://facebook.com/jayson.martinez.359126" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-facebook-square fa-fw"></i>
+                                    <span class="network-name">Facebook</span>
+                                </a>
                             </li>
                         </ul>
                     </div>
