--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
+    <h1 class="text-center" id="projects">Projects</h1>
     <div class="content-section-a">
 
         <div class="container">
