--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Jheysoon</h1>
+                        <h1>JHEYSOON</h1>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
