mention git and mysql

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                     <div class="col s12 m12">
                         <div class="card-panel">
                             <p>Web Developer</p>
-                            <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT</p>
+                            <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
                             <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
+                            <p>Git workflow</p>
                         </div>
                     </div>
                 </div>
