--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="nav-wrapper brown darken-1">
                 <a href="#" class="brand-logo">&nbsp; JM</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#about"><i class="material-icons left">perm_identity</i>About</a></li>
+                    <li><a href="#about"><span class="fa fa-user fa-lg"></span>&nbsp;&nbsp;About</a></li>
                     <li><a href="#projects"><i class="material-icons left">web</i>Projects</a></li>
                     <li><a href="#contact"><i class="material-icons left">contacts</i> Contact</a></li>
                 </ul>
