--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="font-awesome/css/card-bs.css" rel="stylesheet" type="text/css">
+    <link href="css/card-bs.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/apple-touch-icon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,11 +54,18 @@
             <h2 class="header">Hi am Jayson L. Martinez</h2>
             <div class="row">
                 <div class="col s12 m12">
-                    <div class="card-panel">
-                        <p>Web Developer</p>
-                        <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
-                        <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
-                        <p>Git workflow</p>
+                    <div class="card">
+                        <div class="card-header" style="background-color:#fff;">
+                            <h3 class="card-title" style="color:#000;">
+                                Web Developer <span class="fa fa-globe fa-lg"></span>
+                            </h3>
+                        </div>
+                        <div class="card-block">
+                            <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
+                            <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
+                            <p>Git workflow</p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
