add projects card

--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
                             <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
                             <p>Git workflow</p>
                         </div>
-                        
+                    </div>
+                    <div class="card">
+                        <div class="card-header" style="background-color:#fff;">
+                            <h3 class="card-title" style="color:#000;">
+                                Projects
+                            </h3>
+                         </div>
+                        <div class="card-block">
+                            You can view all my project in
+                            <a href="https://github.com/jheysoon" target="_blank" class="waves-effect waves-light btn black blue-grey lighten-3">
+                                Github <span class="fa fa-github fa-lg"></span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
