--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="card-block">
                             <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
                             <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
-                            <p>Git workflow</p>
+                            <p>Git workflow, XAMPP</p>
                         </div>
                     </div>
                     <div class="card">
