--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <p>Git workflow, XAMPP</p>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" id="projects">
                         <div class="card-header" style="background-color:#fff;">
                             <h3 class="card-title" style="color:#000;">
                                 Projects
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="contact">
 
     </div>
 
