revert and update year

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="footer-copyright grey darken-3">
             <div class="container">
-            © <?php echo date('Y') ?> Copyright
+            © 2016 Copyright
             </div>
         </div>
     </footer>
