change header color

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper brown darken-1">
+            <div class="nav-wrapper grey darken-1">
                 <a href="#" class="brand-logo">&nbsp; JM</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="#about"><span class="fa fa-user fa-lg"></span>&nbsp;&nbsp;About</a></li>
