change profile picture

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img src="img/programmer1.jpg">
         </div>
     </div>
-    <img src="img/profile.jpg" class="img-thumbnail center-block" style="border-radius: 50%;margin-top: -125px;" alt="">
+    <img src="img/prof.jpg" class="img-thumbnail center-block" style="border-radius: 50%;margin-top: -70px;" alt="">
     <div class="section white">
         <div class="row container">
             <h2 class="header">Hi am Jayson L. Martinez</h2>
