--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
     <title>Jayson Martinez Portfolio</title>
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap4.css">
     <link href="css/style.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="css/card-bs.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/apple-touch-icon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,63 +26,73 @@
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper grey darken-1">
-                <a href="#" class="brand-logo">&nbsp; JM</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#about"><span class="fa fa-user fa-lg"></span>&nbsp;&nbsp;About</a></li>
-                    <li><a href="#projects"><i class="material-icons left">web</i>Projects</a></li>
-                    <li><a href="#contact"><i class="material-icons left">contacts</i> Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
+    <nav class="navbar grey darken-1 navbar-fixed-top" style="border-radius:0;">
+        <a class="navbar-brand mdl-color-text--white" href="#">JM</a>
 
-
-
+        <ul class="nav navbar-nav pull-xs-right">
+            <li class="nav-item">
+                <a class="nav-link mdl-color-text--white" href="#about">
+                    About
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link mdl-color-text--white" href="#projects">
+                    Projects
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link mdl-color-text--white" href="#contact">
+                    Contact
+                </a>
+            </li>
+        </ul>
+    </nav>
     <div class="parallax-container">
         <div class="parallax">
             <img src="img/programmer1.jpg">
         </div>
     </div>
-    <img src="img/prof.jpg" class="img-thumbnail center-block" style="border-radius: 50%;margin-top: -70px;" alt="">
-    <div class="section white">
-        <div class="row container">
-            <h2 class="header">Hi am Jayson L. Martinez</h2>
-            <div class="row">
-                <div class="col s12 m12">
-                    <div class="card">
-                        <div class="card-header" style="background-color:#fff;">
-                            <h3 class="card-title" style="color:#000;">
-                                Web Developer <span class="fa fa-globe fa-lg"></span>
-                            </h3>
-                        </div>
-                        <div class="card-block">
-                            <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
-                            <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
-                            <p>Git workflow, XAMPP</p>
-                            <p>Open Source Contributor</p>
-                        </div>
+    <img src="img/prof.jpg" class="img-thumbnail center-block">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <h2 class="text-xs-center">Hi am Jayson L. Martinez</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="card">
+                    <div class="card-header" style="background-color: #FFFFFF;">
+                        <h3 class="card-title">
+                            Web Developer <span class="fa fa-globe fa-lg"></span>
+                        </h3>
                     </div>
-                    <div class="card" id="projects">
-                        <div class="card-header" style="background-color:#fff;">
-                            <h3 class="card-title" style="color:#000;">
-                                Projects
-                            </h3>
-                         </div>
-                        <div class="card-block">
-                            You can view all my project in
-                            <a href="https://github.com/jheysoon" target="_blank" class="waves-effect waves-light btn black blue-grey lighten-3">
-                                Github <span class="fa fa-github fa-lg"></span>
-                            </a>
-                        </div>
+                    <div class="card-block">
+                        <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
+                        <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
+                        <p>Git workflow, XAMPP</p>
+                        <p>Open Source Contributor</p>
                     </div>
                 </div>
+
+                <div class="card" id="projects">
+                    <div class="card-header" style="background-color:#fff;">
+                        <h3 class="card-title" style="color:#000;">
+                            Projects
+                        </h3>
+                    </div>
+                    <div class="card-block">
+                        You can view all my project in
+                        <a href="https://github.com/jheysoon" target="_blank" class="btn btn-secondary">
+                            Github <span class="fa fa-github fa-lg"></span>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-
     <div class="row" id="contact">
 
     </div>
@@ -94,11 +101,11 @@
         <div class="container grey darken-2">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Contact Me</h5>
-                    <a target="_blank" href="https://www.facebook.com/jayson.martinez.359126" class="waves-effect waves-light btn white-text indigo darken-1">
+                    <h5 class="mdl-color-text--white">Contact Me</h5>
+                    <a target="_blank" href="https://www.facebook.com/jayson.martinez.359126" class="btn mdl-color-text--white indigo darken-1">
                         <span class="fa fa-facebook fa-lg"></span>
                     </a>
-                    <a target="_blank" href="https://github.com/Jheysoon" class="waves-effect waves-light btn black blue-grey lighten-3">
+                    <a target="_blank" href="https://github.com/Jheysoon" class="btn btn-secondary">
                         <span class="fa fa-github fa-lg"></span>
                     </a>
                 </div>
@@ -107,6 +114,7 @@
                 </div>
             </div>
         </div>
+        <br>
         <div class="footer-copyright grey darken-3">
             <div class="container">
             © 2016 Copyright
@@ -115,11 +123,10 @@
     </footer>
 
     <script src="js/jquery.js"></script>
-    <script src="js/materialize.min.js"></script>
+    <script src="js/parallax.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $('.parallax').parallax();
-            $('.scrollspy').scrollSpy();
         });
     </script>
 </body>
