--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <h2 class="text-xs-center">Hi am Jayson L. Martinez</h2>
+                <h2 class="text-xs-center">Hi! am Jayson L. Martinez</h2>
             </div>
         </div>
         <div class="row">
