--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <br>
         <div class="footer-copyright grey darken-3">
             <div class="container">
-            © 2016 Copyright
+                &copy; 2016 Copyright
             </div>
         </div>
     </footer>
