--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="mdl-color-text--white">Contact Me</h5>
-                    <a target="_blank" href="https://www.facebook.com/jayson.martinez.359126" class="btn mdl-color-text--white indigo darken-1">
+                    <a target="_blank" href="https://www.facebook.com/jayson.martinez.359126"
+                       class="btn mdl-color-text--white indigo darken-1">
                         <span class="fa fa-facebook fa-lg"></span>
                     </a>
                     <a target="_blank" href="https://github.com/Jheysoon" class="btn btn-secondary">
