Add angularjs in libraries

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="card-block">
                         <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
-                        <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery</p>
+                        <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery, AngularJs</p>
                         <p>Git workflow, XAMPP</p>
                         <p>Open Source Contributor</p>
                     </div>
