Add bg-white class

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <div class="card">
-                    <div class="card-header" style="background-color: #FFFFFF;">
+                    <div class="card-header bg-white">
                         <h3 class="card-title">
                             Web Developer <span class="fa fa-globe fa-lg"></span>
                         </h3>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="card" id="projects">
-                    <div class="card-header" style="background-color:#fff;">
+                    <div class="card-header bg-white">
                         <h3 class="card-title" style="color:#000;">
                             Projects
                         </h3>
