--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="card-block">
                         <p>Programming Languages : PHP, CSS, HTML, JAVASCRIPT, MySql</p>
                         <p>PHP MVC Frameworks / Libraries : CodeIgniter, Laravel, Bootstrap, Jquery, AngularJs</p>
-                        <p>Git workflow, XAMPP</p>
+                        <p>Git, XAMPP, SourceTree, GitFlow </p>
                         <p>Open Source Contributor</p>
                     </div>
                 </div>
